// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectorCustomOption should render AlgorithmsSelectorCustomOption correctly 1`] = `
<div
  aria-disabled="false"
  class="css-0"
>
  <div
    class="option_wrapper"
  >
    <input
      class="input_option"
      id="Option 1"
      type="checkbox"
    />
    <img
      alt="checked"
      class="algorithms_input_option"
      src="unchecked.svg"
    />
  </div>
  <span
    class="algorithms_input_option"
  >
    Option 1
  </span>
</div>
`;

exports[`SelectorCustomOption should render SelectorCustomOption correctly 1`] = `
<div
  aria-disabled="false"
  class="css-0"
>
  <div
    class="option_wrapper"
  >
    <input
      class="custom_input_option input_option"
      id="Option 1"
      type="checkbox"
    />
    <img
      alt="checked"
      src="unchecked.svg"
    />
  </div>
  <span>
    Option 1
  </span>
</div>
`;
